# UserManagement

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml
app/: .coveragerc  db_config.py  main.py  settings.py
app/authentication/: __init__.py  api.py  exceptions.py  services.py  utils.py
app/tests/: .env  conftest.py
app/tests/users/: test_users.py
app/users/: __init__.py  api.py  models.py  schema.py  services.py
env/: .db.env  .env
